src/github.com/ebay/beam/query/parser/testdata/insert/errors/var_captured_twice.res
parser: variable ?var captured more than once